Add ugly sample & strip ex imports (currently crashing Hooks Quickjs)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "lib": ["es6"],
     "declaration": false,
+    "moduleDetection": "force",
     "outDir": "./contracts",
     "strict": true,
     "esModuleInterop": true,
